--- a/ui/apps/dashboard/src/components/navigation/index.module.less
+++ b/ui/apps/dashboard/src/components/navigation/index.module.less
@@ -20,7 +20,7 @@
     min-width: 1200px;
     height: 56px;
     z-index: @-zindex;
-    background: rgba(255, 255, 255, 0.94);
+    // background: rgba(255, 255, 255, 0.94);
     box-shadow: 0 2px 4px rgba(27, 31, 35, 0.08);
     backdrop-filter: blur(20px);
     display: flex;
