change ml platform name

--- a/ui/apps/dashboard/src/components/chat/chat.css
+++ b/ui/apps/dashboard/src/components/chat/chat.css
@@ -20,7 +20,7 @@ limitations under the License.
   --chat--color-primary-shade-50: #0d85f0;
   --chat--color-primary-shade-100: #007be6;
   
-  /* Secondary color - using DCN Dashboard secondary color */
+  /* Secondary color - using secondary color */
   --chat--color-secondary: #20b69e;
   --chat--color-secondary-shade-50: #1ca08a;
   
